--- a/views/partcial/footer.ejs
+++ b/views/partcial/footer.ejs
@@ -1,5 +1,5 @@
 <footer>    
-    <p>...**...// This is a footer \\...**...</p>
+    <p>.....**...// This is a footer \\...**......</p>
 </footer>
 </body>
 </html>
